# e-commerce-chat-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: ecommerce_chat.db
src/application/: chat_service.py  dtos.py  product_service.py
src/domain/: entities.py  exceptions.py  repositories.py
src/ecommerce_chat_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/infrastructure/api/: main.py
src/infrastructure/db/: database.py  init_data.py  models.py
src/infrastructure/llm_providers/: gemini_service.py
src/infrastructure/repositories/: chat_repository.py  product_repository.py
